--- a/profile.html
+++ b/profile.html
@@ -6,7 +6,11 @@
     <title>Profil - Portofolio Saya</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <style>
+        body {
+            font-family: 'Poppins', sans-serif;
+        }
         .dark {
             --tw-bg-opacity: 1;
             background-color: rgb(15 23 42 / var(--tw-bg-opacity));
@@ -15,12 +19,19 @@
         .dark .nav-link {
             color: white;
         }
-        .dark .card {
-            background-color: rgb(30 41 59);
+        .dark .profile-card {
+            background: linear-gradient(135deg, #2d3748 0%, #4a5568 100%);
+        }
+        .dark .section-card {
+            background: rgb(30 41 59);
             border-color: rgb(51 65 85);
         }
-        .dark .section-title {
-            border-color: rgb(51 65 85);
+        .dark .language-badge {
+            background: linear-gradient(135deg, #4a5568 0%, #718096 100%);
+            color: #e2e8f0;
+        }
+        .dark .native-badge {
+            background: linear-gradient(135deg, #60a5fa 0%, #4299e1 100%);
         }
         .dark-mode-toggle {
             transition: all 0.3s ease;
@@ -39,12 +50,89 @@
             from { opacity: 0; }
             to { opacity: 1; }
         }
-        .card-hover:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 10px 25px -5px rgba(0, 0, 0, 0.1);
+        .profile-card {
+            background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+            border-radius: 20px;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+            transition: all 0.3s ease;
         }
-        .dark .card-hover:hover {
-            box-shadow: 0 10px 25px -5px rgba(255, 255, 255, 0.05);
+        .profile-card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 15px 35px rgba(0, 0, 0, 0.15);
+        }
+        .section-card {
+            background: white;
+            border-radius: 15px;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.05);
+            border: 1px solid rgb(229 231 235);
+        }
+        .software-icon {
+            width: 50px;
+            height: 50px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border-radius: 12px;
+            background: white;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            transition: all 0.3s ease;
+        }
+        .dark .software-icon {
+            background: rgb(51 65 85);
+        }
+        .software-icon:hover {
+            transform: scale(1.1);
+        }
+        .timeline-item {
+            position: relative;
+            padding-left: 30px;
+            margin-bottom: 30px;
+        }
+        .timeline-item:before {
+            content: '';
+            position: absolute;
+            left: 0;
+            top: 5px;
+            width: 15px;
+            height: 15px;
+            border-radius: 50%;
+            background: linear-gradient(135deg, #3b82f6 0%, #2563eb 100%);
+        }
+        .dark .timeline-item:before {
+            background: linear-gradient(135deg, #60a5fa 0%, #4299e1 100%);
+        }
+        .timeline-item:after {
+            content: '';
+            position: absolute;
+            left: 7px;
+            top: 20px;
+            width: 1px;
+            height: calc(100% - 15px);
+            background: #ddd;
+        }
+        .dark .timeline-item:after {
+            background: #4a5568;
+        }
+        .timeline-item:last-child:after {
+            display: none;
+        }
+        .language-badge {
+            display: inline-block;
+            padding: 4px 12px;
+            border-radius: 20px;
+            background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+            margin-right: 8px;
+            margin-bottom: 8px;
+            font-size: 14px;
+            font-weight: 500;
+            color: #4a5568;
+        }
+        .native-badge {
+            background: linear-gradient(135deg, #3b82f6 0%, #2563eb 100%);
+            color: white;
+        }
+        .dark .native-badge {
+            background: linear-gradient(135deg, #60a5fa 0%, #4299e1 100%);
         }
         .social-icon {
             transition: all 0.3s ease;
@@ -94,83 +182,129 @@
         </div>
     </header>
     <!-- Main Content -->
-    <main class="container mx-auto px-6 py-12">
+    <main class="container mx-auto px-6 py-12 max-w-4xl">
         <!-- Profile Section -->
         <section id="profile" class="py-12 fade-in">
-            <div class="mb-12">
-                <h2 class="text-3xl font-bold mb-4 dark:text-white flex items-center">
-                    <span class="section-title border-b-4 border-blue-500 pb-2 pr-4">Profil Saya</span>
-                </h2>
-            </div>
-            <div class="flex flex-col lg:flex-row gap-8">
-                <div class="lg:w-1/3">
-                    <div class="bg-white dark:bg-slate-800 rounded-lg shadow-md p-6 border border-gray-200 dark:border-slate-700 card card-hover">
-                        <div class="flex flex-col items-center mb-6">
-                            <div class="w-32 h-32 rounded-full overflow-hidden mb-4 border-4 border-blue-500 dark:border-blue-400">
-                                <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=774&q=80" alt="Profil" class="w-full h-full object-cover">
-                            </div>
-                            <h3 class="text-xl font-bold dark:text-white">John Doe</h3>
-                            <p class="text-gray-600 dark:text-gray-400">Pengembang Web</p>
-                        </div>
-                        <div class="space-y-4">
-                            <div>
-                                <h4 class="font-semibold dark:text-white">Tentang Saya</h4>
-                                <p class="text-gray-600 dark:text-gray-400">Pengembang berpengalaman lebih dari 5 tahun dalam pembuatan aplikasi web dan cinta pada budaya anime.</p>
-                            </div>
-                            <div>
-                                <h4 class="font-semibold dark:text-white">Kontak</h4>
-                                <p class="text-gray-600 dark:text-gray-400">
-                                    <i class="fas fa-envelope mr-2"></i> john.doe@example.com<br>
-                                    <i class="fas fa-phone mr-2"></i> +1 (123) 456-7890
-                                </p>
-                            </div>
-                            <div>
-                                <h4 class="font-semibold dark:text-white">Keterampilan</h4>
-                                <div class="flex flex-wrap gap-2 mt-2">
-                                    <span class="px-2 py-1 bg-blue-100 text-blue-800 text-xs rounded dark:bg-blue-900 dark:text-blue-300">HTML/CSS</span>
-                                    <span class="px-2 py-1 bg-blue-100 text-blue-800 text-xs rounded dark:bg-blue-900 dark:text-blue-300">JavaScript</span>
-                                    <span class="px-2 py-1 bg-blue-100 text-blue-800 text-xs rounded dark:bg-blue-900 dark:text-blue-300">React</span>
-                                    <span class="px-2 py-1 bg-blue-100 text-blue-800 text-xs rounded dark:bg-blue-900 dark:text-blue-300">Node.js</span>
-                                    <span class="px-2 py-1 bg-blue-100 text-blue-800 text-xs rounded dark:bg-blue-900 dark:text-blue-300">UI/UX</span>
-                                </div>
-                            </div>
+            <!-- Profile Header -->
+            <div class="profile-card p-6 mb-8">
+                <div class="flex flex-col sm:flex-row items-center">
+                    <div class="w-32 h-32 rounded-full overflow-hidden border-4 border-white shadow-lg mb-4 sm:mb-0 sm:mr-6">
+                        <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=774&q=80" alt="Profil" class="w-full h-full object-cover">
+                    </div>
+                    <div class="text-center sm:text-left">
+                        <h1 class="text-3xl font-bold text-gray-800 dark:text-white mb-1">John Doe</h1>
+                        <p class="text-lg text-gray-600 dark:text-gray-300 mb-3">Pengembang Web</p>
+                        <div class="flex justify-center sm:justify-start space-x-4">
+                            <a href="#" class="social-icon text-gray-600 hover:text-blue-500 dark:hover:text-blue-400 transition-colors">
+                                <i class="fab fa-github text-xl"></i>
+                            </a>
+                            <a href="#" class="social-icon text-gray-600 hover:text-blue-400 dark:hover:text-blue-300 transition-colors">
+                                <i class="fab fa-twitter text-xl"></i>
+                            </a>
+                            <a href="#" class="social-icon text-gray-600 hover:text-blue-600 dark:hover:text-blue-400 transition-colors">
+                                <i class="fab fa-linkedin-in text-xl"></i>
+                            </a>
+                            <a href="#" class="social-icon text-gray-600 hover:text-pink-500 dark:hover:text-pink-400 transition-colors">
+                                <i class="fab fa-instagram text-xl"></i>
+                            </a>
                         </div>
                     </div>
                 </div>
-                <div class="lg:w-2/3">
-                    <div class="bg-white dark:bg-slate-800 rounded-lg shadow-md p-6 border border-gray-200 dark:border-slate-700 mb-6 card card-hover">
-                        <h3 class="text-xl font-bold mb-4 dark:text-white">Pengalaman Kerja</h3>
-                        <div class="space-y-6">
-                            <div class="border-l-4 border-blue-500 pl-4">
-                                <h4 class="font-bold dark:text-white">Pengembang Web Senior</h4>
-                                <p class="text-gray-600 dark:text-gray-400">Tech Solutions Inc. • 2020 - Sekarang</p>
-                                <p class="mt-2 text-gray-600 dark:text-gray-400">Pengembang utama untuk proyek klien, khususnya dalam aplikasi React dan desain responsif.</p>
+            </div>
+            <div class="grid grid-cols-1 lg:grid-cols-3 gap-6">
+                <!-- Left Column -->
+                <div class="lg:col-span-2 space-y-6">
+                    <!-- Experience Section -->
+                    <div class="section-card p-6">
+                        <h2 class="text-2xl font-bold text-gray-800 dark:text-white mb-6 flex items-center">
+                            <i class="fas fa-briefcase mr-3 text-blue-500 dark:text-blue-400"></i>
+                            Pengalaman Kerja
+                        </h2>
+                        <div class="timeline-item">
+                            <h3 class="text-lg font-semibold text-gray-800 dark:text-white">Full Stack Developer</h3>
+                            <p class="text-blue-500 dark:text-blue-400 mb-1">Nexlify Technologies • Jan 2022 - Sekarang</p>
+                            <p class="text-gray-600 dark:text-gray-300">Memimpin pengembangan aplikasi web menggunakan React, Node.js, dan MongoDB untuk klien di sektor fintech.</p>
+                        </div>
+                        <div class="timeline-item">
+                            <h3 class="text-lg font-semibold text-gray-800 dark:text-white">Front-End Developer</h3>
+                            <p class="text-blue-500 dark:text-blue-400 mb-1">CreativeLabs • Jun 2019 - Des 2021</p>
+                            <p class="text-gray-600 dark:text-gray-300">Mendesain dan mengimplementasikan antarmuka pengguna responsif dengan Vue.js dan Tailwind CSS.</p>
+                        </div>
+                        <div class="timeline-item">
+                            <h3 class="text-lg font-semibold text-gray-800 dark:text-white">Junior Web Developer</h3>
+                            <p class="text-blue-500 dark:text-blue-400 mb-1">StartUpX • Mar 2017 - Mei 2019</p>
+                            <p class="text-gray-600 dark:text-gray-300">Mendukung pengembangan situs web menggunakan HTML, CSS, dan JavaScript untuk startup lokal.</p>
+                        </div>
+                    </div>
+                    <!-- Education Section -->
+                    <div class="section-card p-6">
+                        <h2 class="text-2xl font-bold text-gray-800 dark:text-white mb-6 flex items-center">
+                            <i class="fas fa-graduation-cap mr-3 text-blue-500 dark:text-blue-400"></i>
+                            Pendidikan
+                        </h2>
+                        <div class="timeline-item">
+                            <h3 class="text-lg font-semibold text-gray-800 dark:text-white">Sarjana Teknik Informatika</h3>
+                            <p class="text-blue-500 dark:text-blue-400 mb-1">Universitas Teknologi Indonesia • 2013 - 2017</p>
+                            <p class="text-gray-600 dark:text-gray-300">IPK 3.85/4.0, dengan fokus pada pengembangan perangkat lunak dan sistem informasi.</p>
+                        </div>
+                        <div class="timeline-item">
+                            <h3 class="text-lg font-semibold text-gray-800 dark:text-white">SMA Jurusan IPA</h3>
+                            <p class="text-blue-500 dark:text-blue-400 mb-1">SMA Negeri 1 Jakarta • 2010 - 2013</p>
+                            <p class="text-gray-600 dark:text-gray-300">Lulus dengan nilai rata-rata 92/100, aktif di klub pemrograman.</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Right Column -->
+                <div class="space-y-6">
+                    <!-- Software Section -->
+                    <div class="section-card p-6">
+                        <h2 class="text-2xl font-bold text-gray-800 dark:text-white mb-6 flex items-center">
+                            <i class="fas fa-laptop-code mr-3 text-blue-500 dark:text-blue-400"></i>
+                            Software
+                        </h2>
+                        <div class="grid grid-cols-3 gap-4">
+                            <div class="flex flex-col items-center">
+                                <div class="software-icon mb-2">
+                                    <i class="fas fa-image text-2xl text-blue-500 dark:text-blue-400"></i>
+                                </div>
+                                <span class="text-sm font-medium text-gray-700 dark:text-gray-300">Picsay</span>
                             </div>
-                            <div class="border-l-4 border-blue-500 pl-4">
-                                <h4 class="font-bold dark:text-white">Pengembang Web</h4>
-                                <p class="text-gray-600 dark:text-gray-400">Digital Creations • 2017 - 2020</p>
-                                <p class="mt-2 text-gray-600 dark:text-gray-400">Mengembangkan dan memelihara situs WordPress dan aplikasi web khusus untuk bisnis kecil.</p>
+                            <div class="flex flex-col items-center">
+                                <div class="software-icon mb-2">
+                                    <i class="fas fa-video text-2xl text-blue-500 dark:text-blue-400"></i>
+                                </div>
+                                <span class="text-sm font-medium text-gray-700 dark:text-gray-300">Kinemaster</span>
                             </div>
-                            <div class="border-l-4 border-blue-500 pl-4">
-                                <h4 class="font-bold dark:text-white">Pengembang Junior</h4>
-                                <p class="text-gray-600 dark:text-gray-400">WebStart • 2015 - 2017</p>
-                                <p class="mt-2 text-gray-600 dark:text-gray-400">Membantu dalam pengembangan front-end dan belajar teknologi web modern.</p>
+                            <div class="flex flex-col items-center">
+                                <div class="software-icon mb-2">
+                                    <i class="fas fa-film text-2xl text-blue-500 dark:text-blue-400"></i>
+                                </div>
+                                <span class="text-sm font-medium text-gray-700 dark:text-gray-300">CapCut</span>
+                            </div>
+                            <div class="flex flex-col items-center">
+                                <div class="software-icon mb-2">
+                                    <i class="fas fa-paint-brush text-2xl text-blue-500 dark:text-blue-400"></i>
+                                </div>
+                                <span class="text-sm font-medium text-gray-700 dark:text-gray-300">Photoshop</span>
+                            </div>
+                            <div class="flex flex-col items-center">
+                                <div class="software-icon mb-2">
+                                    <i class="fas fa-closed-captioning text-2xl text-blue-500 dark:text-blue-400"></i>
+                                </div>
+                                <span class="text-sm font-medium text-gray-700 dark:text-gray-300">Aegisub</span>
                             </div>
                         </div>
                     </div>
-                    <div class="bg-white dark:bg-slate-800 rounded-lg shadow-md p-6 border border-gray-200 dark:border-slate-700 card card-hover">
-                        <h3 class="text-xl font-bold mb-4 dark:text-white">Pendidikan</h3>
-                        <div class="space-y-6">
-                            <div class="border-l-4 border-blue-500 pl-4">
-                                <h4 class="font-bold dark:text-white">MSc di Ilmu Komputer</h4>
-                                <p class="text-gray-600 dark:text-gray-400">Universitas Negeri • 2013 - 2015</p>
-                                <p class="mt-2 text-gray-600 dark:text-gray-400">Khusus dalam Interaksi Manusia-Komputer dan Teknologi Web.</p>
-                            </div>
-                            <div class="border-l-4 border-blue-500 pl-4">
-                                <h4 class="font-bold dark:text-white">BSc di Teknologi Informasi</h4>
-                                <p class="text-gray-600 dark:text-gray-400">Universitas Negeri • 2009 - 2013</p>
-                                <p class="mt-2 text-gray-600 dark:text-gray-400">Lulus dengan pujian. Fokus pada pengembangan perangkat lunak dan sistem basis data.</p>
-                            </div>
+                    <!-- Language Skills -->
+                    <div class="section-card p-6">
+                        <h2 class="text-2xl font-bold text-gray-800 dark:text-white mb-6 flex items-center">
+                            <i class="fas fa-language mr-3 text-blue-500 dark:text-blue-400"></i>
+                            Keahlian Bahasa
+                        </h2>
+                        <div class="flex flex-wrap">
+                            <span class="language-badge native-badge">Indonesia (Asli)</span>
+                            <span class="language-badge">Inggris (C2)</span>
+                            <span class="language-badge">Jepang (N3)</span>
                         </div>
                     </div>
                 </div>
