--- a/tulisan.html
+++ b/tulisan.html
@@ -83,7 +83,7 @@
                     <a href="index.html">Portofolio</a>
                 </div>
                 <nav class="hidden md:flex space-x-8">
-                    <a href="index.html#home" class="nav-link hover:text-blue-500 dark:hover:text-blue-400 transition">Beranda</a>
+                    <a href="index.html" class="nav-link hover:text-blue-500 dark:hover:text-blue-400 transition">Beranda</a>
                     <a href="profile.html" class="nav-link hover:text-blue-500 dark:hover:text-blue-400 transition">Profil</a>
                     <a href="tulisan.html" class="nav-link hover:text-blue-500 dark:hover:text-blue-400 transition active">Tulisan</a>
                     <a href="galeri.html" class="nav-link hover:text-blue-500 dark:hover:text-blue-400 transition">Galeri</a>
@@ -103,7 +103,7 @@
             <!-- Mobile Menu -->
             <div id="mobileMenu" class="hidden md:hidden mt-4 pb-2">
                 <div class="flex flex-col space-y-3">
-                    <a href="index.html#home" class="nav-link hover:text-blue-500 dark:hover:text-blue-400 transition">Beranda</a>
+                    <a href="index.html" class="nav-link hover:text-blue-500 dark:hover:text-blue-400 transition">Beranda</a>
                     <a href="profile.html" class="nav-link hover:text-blue-500 dark:hover:text-blue-400 transition">Profil</a>
                     <a href="tulisan.html" class="nav-link hover:text-blue-500 dark:hover:text-blue-400 transition active">Tulisan</a>
                     <a href="galeri.html" class="nav-link hover:text-blue-500 dark:hover:text-blue-400 transition">Galeri</a>
