--- a/proyek-anime.html
+++ b/proyek-anime.html
@@ -73,12 +73,12 @@
             width: 100%;
             height: 100%;
             background-color: rgba(0,0,0,0.5);
+            display: flex;
             justify-content: center;
             align-items: center;
         }
         .modal-content {
             background-color: white;
-            dark:bg-slate-800;
             padding: 20px;
             border-radius: 10px;
             max-width: 500px;
@@ -86,6 +86,7 @@
             max-height: 80vh;
             overflow-y: auto;
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+            margin: auto;
         }
         .dark .modal-content {
             background-color: rgb(30 41 59);
@@ -142,7 +143,7 @@
             transition: all 0.3s ease;
         }
         .filter-btn:hover {
-            background-color: #d1d5db;
+            background \&color: #d1d5db;
         }
         .filter-btn.active {
             background-color: #3b82f6;
@@ -442,7 +443,7 @@
                             modalSynopsis.textContent = data.synopsis;
                             downloadLink.setAttribute('href', data.downloadLink);
                             // Show modal
-                            modal.style.display = 'block';
+                            modal.style.display = 'flex';
                         }
                     });
                 });
