--- a/proyek-anime.html
+++ b/proyek-anime.html
@@ -143,7 +143,7 @@
             transition: all 0.3s ease;
         }
         .filter-btn:hover {
-            background \&color: #d1d5db;
+            background-color: #d1d5db;
         }
         .filter-btn.active {
             background-color: #3b82f6;
@@ -419,6 +419,8 @@
         const modalGenre = document.getElementById('modalGenre');
         const modalSynopsis = document.getElementById('modalSynopsis');
         const downloadLink = document.getElementById('downloadLink');
+        // Ensure modal is hidden on page load
+        modal.style.display = 'none';
         // Fetch anime data from JSON file
         let animeData = {};
         fetch('anime-data.json')
