--- a/profile.html
+++ b/profile.html
@@ -194,20 +194,18 @@
                     <div class="text-center sm:text-left">
                         <h1 class="text-3xl font-bold text-gray-800 dark:text-white mb-1">John Doe</h1>
                         <p class="text-lg text-gray-600 dark:text-gray-300 mb-3">Pengembang Web</p>
-                        <div class="flex justify-center sm:justify-start space-x-4">
-                            <a href="#" class="social-icon text-gray-600 hover:text-blue-500 dark:hover:text-blue-400 transition-colors">
-                                <i class="fab fa-github text-xl"></i>
-                            </a>
-                            <a href="#" class="social-icon text-gray-600 hover:text-blue-400 dark:hover:text-blue-300 transition-colors">
-                                <i class="fab fa-twitter text-xl"></i>
-                            </a>
-                            <a href="#" class="social-icon text-gray-600 hover:text-blue-600 dark:hover:text-blue-400 transition-colors">
-                                <i class="fab fa-linkedin-in text-xl"></i>
-                            </a>
-                            <a href="#" class="social-icon text-gray-600 hover:text-pink-500 dark:hover:text-pink-400 transition-colors">
-                                <i class="fab fa-instagram text-xl"></i>
-                            </a>
-                        </div>
+<!-- Profile Header social links -->
+<div class="flex justify-center sm:justify-start space-x-4">
+<a href="#" class="social-icon text-gray-600 hover:text-blue-400 dark:hover:text-blue-300 transition-colors">
+<i class="fab fa-telegram text-xl"></i>
+</a>
+<a href="#" class="social-icon text-gray-600 hover:text-blue-600 dark:hover:text-blue-400 transition-colors">
+<i class="fab fa-linkedin-in text-xl"></i>
+</a>
+<a href="#" class="social-icon text-gray-600 hover:text-pink-500 dark:hover:text-pink-400 transition-colors">
+<i class="fab fa-instagram text-xl"></i>
+</a>
+</div>
                     </div>
                 </div>
             </div>
