--- a/galeri.html
+++ b/galeri.html
@@ -175,20 +175,17 @@
                     <span class="text-xl font-bold text-blue-500 dark:text-blue-400">Portofolio</span>
                     <p class="text-gray-600 dark:text-gray-400 mt-2">© 2023 John Doe. All rights reserved.</p>
                 </div>
-                <div class="flex space-x-6">
-                    <a href="#" class="social-icon text-gray-500 hover:text-blue-500 dark:hover:text-blue-400">
-                        <i class="fab fa-github text-xl"></i>
-                    </a>
-                    <a href="#" class="social-icon text-gray-500 hover:text-blue-400 dark:hover:text-blue-300">
-                        <i class="fab fa-twitter text-xl"></i>
-                    </a>
-                    <a href="#" class="social-icon text-gray-500 hover:text-blue-600 dark:hover:text-blue-400">
-                        <i class="fab fa-linkedin-in text-xl"></i>
-                    </a>
-                    <a href="#" class="social-icon text-gray-500 hover:text-pink-500 dark:hover:text-pink-400">
-                        <i class="fab fa-instagram text-xl"></i>
-                    </a>
-                </div>
+<div class="flex space-x-6">
+<a href="#" class="social-icon text-gray-500 hover:text-blue-400 dark:hover:text-blue-300">
+<i class="fab fa-telegram text-xl"></i>
+</a>
+<a href="#" class="social-icon text-gray-500 hover:text-blue-600 dark:hover:text-blue-400">
+<i class="fab fa-linkedin-in text-xl"></i>
+</a>
+<a href="#" class="social-icon text-gray-500 hover:text-pink-500 dark:hover:text-pink-400">
+<i class="fab fa-instagram text-xl"></i>
+</a>
+</div>
             </div>
         </div>
     </footer>
