--- a/galeri.html
+++ b/galeri.html
@@ -286,6 +286,13 @@
                 behavior: 'smooth'
             });
         });
+
+// Disable klik kanan khusus gambar
+document.addEventListener('contextmenu', function(e) {
+  if (e.target.tagName === 'IMG') {
+    e.preventDefault();
+  }
+});
     </script>
 </body>
 </html>
