--- a/index.html
+++ b/index.html
@@ -119,11 +119,11 @@ Hai, Saya <span class="text-blue-500 dark:text-blue-400">John Doe</span>
 Saya menciptakan situs web yang indah dan fungsional serta berbagi kegemaran saya terhadap anime melalui berbagai proyek. Dengan pengalaman lebih dari 5 tahun, saya membangun aplikasi web yang responsif dan performan tinggi.
 </p>
 <div class="flex flex-wrap gap-4">
-<a href="sosmed.html" class="bg-blue-500 hover:bg-blue-600 text-white px-8 py-3 rounded-full font-semibold transition-all duration-300 transform hover:scale-105 glow">
-Hubungi Saya
+<a href="mailto:emailkamu@example.com" class="bg-blue-500 hover:bg-blue-600 text-white px-8 py-3 rounded-full font-semibold transition-all duration-300 transform hover:scale-105 glow">
+  Hubungi Saya
 </a>
 <a href="profile.html" class="border-2 border-blue-500 text-blue-500 dark:text-blue-400 hover:bg-blue-50 dark:hover:bg-slate-700 px-8 py-3 rounded-full font-semibold transition-all duration-300 transform hover:scale-105">
-Pelajari Lebih Lanjut
+  Tentang Saya
 </a>
 </div>
 <div class="flex gap-6 pt-4">
@@ -150,9 +150,6 @@ class="relative w-64 h-64 md:w-80 md:h-80 rounded-full object-cover border-4 bor
 <div class="absolute -bottom-6 -left-6 bg-blue-500 dark:bg-blue-600 px-4 py-2 rounded-full flex items-center gap-2">
 <div class="w-3 h-3 bg-green-400 rounded-full animate-pulse"></div>
 <span class="text-sm font-medium text-white">Tersedia untuk bekerja</span>
-</div>
-<div class="absolute -top-6 -right-6 bg-blue-900/80 dark:bg-blue-800/80 backdrop-blur-sm px-4 py-2 rounded-full">
-<span class="text-sm font-medium text-white">5+ Tahun Pengalaman</span>
 </div>
 </div>
 </div>
