--- a/tulisan.html
+++ b/tulisan.html
@@ -252,7 +252,7 @@
                                 }">${article.category.charAt(0).toUpperCase() + article.category.slice(1)}</span>
                             </div>
                             <h3 class="mb-2 text-xl font-bold tracking-tight dark:text-white">${article.title}</h3>
-                            <p class="mb-4 text-gray-700 dark:text-gray-400">${article.content.split('</p>')[0].replace(/<[^>]+>/g, '')}</p>
+                            <p class="mb-4 text-gray-700 dark:text-gray-400">${article.subtitle}</p>
                             <div class="flex justify-between items-center">
                                 <span class="text-sm text-gray-500 dark:text-gray-400">${article.date}</span>
                                 <a href="artikel.html?id=${article.id}" class="text-blue-500 hover:underline dark:text-blue-400">Baca lebih lanjut →</a>
