--- a/tulisan.html
+++ b/tulisan.html
@@ -253,6 +253,7 @@
                             </div>
                             <h3 class="mb-2 text-xl font-bold tracking-tight dark:text-white">${article.title}</h3>
                             <p class="mb-4 text-gray-700 dark:text-gray-400">${article.subtitle}</p>
+                            <p class="mb-2 text-sm italic text-gray-500 dark:text-gray-400">Ditulis oleh ${article.author}</p>
                             <div class="flex justify-between items-center">
                                 <span class="text-sm text-gray-500 dark:text-gray-400">${article.date}</span>
                                 <a href="artikel.html?id=${article.id}" class="text-blue-500 hover:underline dark:text-blue-400">Baca lebih lanjut →</a>
